# tudus

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  result  shell.nix
app/: tudus.desktop
nix/: default.nix
src/: cfg.rs  db.rs  example.rs  main.rs  todo.rs  tudus.rs
