[package]
name = "tudus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
iced = { version = "0.12.1", features = ["image", "debug" ] }
serde = { version = "1.0.202", features = [ "derive" ] }
sqlite = "0.36.0"
toml = "0.8.14"
